- fixed swipe up on mobile.

--- a/src/public/assets/styles/_landing.scss
+++ b/src/public/assets/styles/_landing.scss
@@ -375,6 +375,7 @@ $tasting-table-setting-height-as-margin: 35%;
   &::after {
     bottom: 0;
     content: 'swipe up';
+    margin-left:-19px;
   }
 
   &::before {
